tests/neg-custom-args/captures/classifiers-secondclass.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/classifiers-secondclass.scala:42:10 --------------------
42 |        f.write(42)         // error, the error stems from here
   |        ^^^^^^^
   |        Reference `f.write` is not included in the allowed capture set 's1
   |        of an enclosing function literal with expected type (Int, Int) ->{any.only[Read]} Int.
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/classifiers-secondclass.scala:54:12 --------------------
54 |          f.write(42)         // error, the error stems from here
   |          ^^^^^^^
   |          Reference `f.write` is not included in the allowed capture set 's2
   |          of an enclosing function literal with expected type (Int, Int) ->{any.only[Read]} Int.
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/classifiers-secondclass.scala:57:12 --------------------
57 |          g.write(42)         // error, the error stems from here
   |          ^^^^^^^
   |          Reference `g.write` is not included in the allowed capture set 's3
   |          of an enclosing function literal with expected type (Int, Int) ->{any.only[Read]} Int.
